feat(socket): 수정